# mcc

./: CMakeLists.txt  start  staticAnalysis
res/: acceptedKey.json  defaultconf.json
src/: channelManager.cpp  channelManager.h  channelStatusMediator.cpp  channelStatusMediator.h  clientManager.cpp  clientManager.h  connectionInfo.cpp  connectionInfo.h  contract.cpp  contract.h  deleteChannelHandler.cpp  deleteChannelHandler.h  deleteClientHandler.cpp  deleteClientHandler.h  main.cpp  manager.cpp  manager.h  mcHubType.h  mediator.cpp  mediator.h  message.cpp  message.h  messageHandler.cpp  messageHandler.h  messageQueue.cpp  messageQueue.h  messageTransportService.cpp  messageTransportService.h  registerChannelHandler.cpp  registerChannelHandler.h  registerClientHandler.cpp  registerClientHandler.h  requestChannelHandler.cpp  requestChannelHandler.h  taskSet.cpp  taskSet.h  testStub.cpp  testStub.h
src/conf/: confData.cpp  confData.h  configurator.cpp  configurator.h
src/connection/: connectionManager.cpp  connectionManager.h  socket.cpp  socket.h  socketData.cpp  socketData.h  udpServer.cpp  udpServer.h
src/feature/: channelManager.cpp  channelManager.h  channelStatusMediator.cpp  channelStatusMediator.h  clientManager.cpp  clientManager.h  connectionInfo.cpp  connectionInfo.h  contract.cpp  contract.h  deleteChannelHandler.cpp  deleteChannelHandler.h  deleteClientHandler.cpp  deleteClientHandler.h  manager.cpp  manager.h  message.cpp  message.h  messageHandler.cpp  messageHandler.h  messageProcessor.cpp  messageProcessor.h  messageTransportService.cpp  messageTransportService.h  registerChannelHandler.cpp  registerChannelHandler.h  registerClientHandler.cpp  registerClientHandler.h  requestChannelHandler.cpp  requestChannelHandler.h  unknownMessageHandler.cpp  unknownMessageHandler.h
src/test/: CMakeLists.txt  baseFrameworkTestSuite.cpp  baseFrameworkTestSuite.h  baseFrameworkTester.cpp  baseFrameworkTester.h  deleteChannelTestSuite.cpp  deleteChannelTestSuite.h  deleteClientTestSuite.cpp  deleteClientTestSuite.h  getCov.sh  meassureCoverage.sh  messageQueueTestSuite.cpp  messageQueueTestSuite.h  registerChannelTestSuite.cpp  registerChannelTestSuite.h  registerClientTestSuite.cpp  registerClientTestSuite.h  requestChannelTestSuite.h  subscriptionTestSuite.cpp  subscriptionTestSuite.h  test.sh  testManager.cpp  testManager.h  testOption.cpp  testOption.h  testStub.h  testSuite.cpp  testSuite.h  tester.cpp  tester.h  testmain.cpp
src/test/configTest/: CMakeLists.txt  configOptTestSuite.cpp  configOptTestSuite.h  test.sh  tester.cpp
src/test/configTest/res/: acceptedKey.json  config.json  defaultconf.json
src/test/connectionTest/: CMakeLists.txt  deleteChannelTestSuite.cpp  deleteChannelTestSuite.h  deleteClientTestSuite.cpp  deleteClientTestSuite.h  registerChannelTestSuite.cpp  registerChannelTestSuite.h  registerClientTestSuite.cpp  registerClientTestSuite.h  reqMsgMaker.cpp  reqMsgMaker.h  requestChannelTestData.cpp  requestChannelTestData.h  requestChannelTestSuite.cpp  requestChannelTestSuite.h  socketClient.cpp  socketClient.h  subscribeTestSuite.cpp  subscribeTestSuite.h  test.sh  testData.cpp  testData.h  tester.cpp  testmain.cpp  udpClient.cpp  udpClient.h
src/test/connectionTest/res/: alice_channels.json  bar_channels.json  foo_bar_channel.json  foo_channels.json  tom_channels.json
src/test/featureTest/: CMakeLists.txt  baseFrameworkTestSuite.cpp  baseFrameworkTestSuite.h  deleteChannelTestSuite.cpp  deleteChannelTestSuite.h  deleteClientTestSuite.cpp  deleteClientTestSuite.h  kill_ipcs.sh  messageQueueTestSuite.cpp  messageQueueTestSuite.h  registerChannelTestSuite.cpp  registerChannelTestSuite.h  registerClientTestSuite.cpp  registerClientTestSuite.h  requestChannelTestSuite.cpp  requestChannelTestSuite.h  subscriptionTestSuite.cpp  subscriptionTestSuite.h  test.sh  tester.cpp  testmain.cpp  undefinedTypeTestSuite.cpp  undefinedTypeTestSuite.h
src/test/featureTest/res/: createdChannelList.json  internelError.json
src/test/res/: acceptedKey.json  invalidAcceptedKey.json  registeredChannelList.json
src/unitTest/: baseFrameworkTestSuite.cpp  deleteChannelTestSuite.cpp  deleteChannelTestSuite.h  deleteClientTestSuite.cpp  deleteClientTestSuite.h  messageQueueTestSuite.cpp  registerChannelTestSuite.cpp  registerChannelTestSuite.h  registerClientTestSuite.cpp  requestChannelTestSuite.cpp  tester.h  testmain.cpp
